--- a/manifest.json
+++ b/manifest.json
@@ -14,5 +14,11 @@
 
     "icons": {
         "128": "icon.png"
+    },
+
+    "options_page": "options.html",
+    "options_ui": {
+        "page": "options.html",
+        "open_in_tab": true
     }
 }
